# actr

./: .gitignore  .swiftlint.yml  AGENTS.md  Cargo.toml  README.md  actr.example.toml  demo.sh  release.sh
actor-rtc-framework/: Cargo.toml  README.md
actor-rtc-framework/benches/: actor_benchmarks.rs
actor-rtc-framework/src/: actor.rs  concurrent_handle.rs  context.rs  error.rs  input_handler.rs  lib.rs  lifecycle.rs  local_actor.rs  messaging.rs  persistent_mailbox.rs  remote_actor.rs  routing.rs  signaling.rs  webrtc.rs
actr-cli/: Cargo.toml
actr-cli/src/: error.rs  main.rs  utils.rs
actr-cli/src/commands/: build.rs  init.rs  mod.rs  run.rs
actr-cli/src/templates/: mod.rs
actr-config/: Cargo.toml
actr-config/examples/: parse_config.rs
actr-config/src/: config.rs  dependencies.rs  error.rs  lib.rs  routing.rs
bindings/python/: .gitignore  Cargo.toml  README.md  pyproject.toml
bindings/python/actr-workload/: README.md  pyproject.toml  setup.py
bindings/python/src/: errors.rs  lib.rs  observability.rs  runtime.rs  types.rs  workload.rs
bindings/python/tests/: test_smoke.py
bindings/typescript/: .gitignore  .prettierignore  Cargo.toml  README.md  README.zh-CN.md  README.zh.md  eslint.config.mjs  index.d.ts  index.js  package-lock.json  package.json  vitest.config.ts
bindings/typescript/.cargo/: config.toml
bindings/typescript/actr-workload/: eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
bindings/typescript/examples/: README.md
bindings/typescript/scripts/: codegen.js  strip-napi-version-check.js
bindings/typescript/src/: basic.test.ts  context.rs  error.rs  lib.rs  logger.rs  runtime.rs  types.rs  workload.rs
bindings/typescript/typescript/: error.ts  index.ts  node.ts  ref.ts  system.ts  types.ts
bindings/web/: .eslintignore  .eslintrc.json  .gitignore  Cargo.toml  README.md  README.zh.md  TODO.md  TODO.zh.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-wasm.js  test.html  tsconfig.json
bindings/web/.cargo/: config.toml
bindings/web/docs/: README.md  architecture-changes-2026-04.zh.md  error-handling.md  fastpath-demo.zh.md  getting-started.md  option-u-phase6-gamma-unified.zh.md  option-u-wit-compile-web.zh.md  requirements.md  t18-jco-async-lift-hang.zh.md  td-006-multi-client-rpc-analysis.zh.md  tech-debt.zh.md  test-coverage-report.md  test-coverage-report.zh.md  troubleshooting.md  zero-copy-analysis.md  zero-copy-analysis.zh.md  zero-copy-phase3-analysis.zh.md  zero-copy-stage1-summary.md  zero-copy-stage1-summary.zh.md  zero-copy-stage2-summary.md  zero-copy-stage2-summary.zh.md  zerocopy-comparison.zh.md
bindings/web/scripts/: gen-types.sh  publish.sh  sync-cli-assets.sh  test-all.sh  test-e2e.sh  transpile-component.sh  wasm-coverage.sh
cli/: Cargo.toml  README.md  build.rs  release.sh
cli/assets/web-runtime/: actor-wbg.sw.js  actor.sw.js  actr-host.html  actr_runtime_sw.js  actr_runtime_sw_bg.wasm  actr_sw_host.js  actr_sw_host_bg.wasm
cli/fixtures/kotlin/: actr.toml
cli/fixtures/protos/: local.echo.rust-client.hbs
cli/fixtures/python/: ActrService.py.hbs
cli/fixtures/rust/: Cargo.service.toml.hbs  Cargo.toml.hbs  echo_service.rs.hbs  gitignore.hbs  lib.rs.hbs  lib.rs.service.hbs  main.rs.hbs  main.rs.service.hbs
cli/fixtures/swift/: ActrService+Echo.swift.hbs  ActrService.swift.hbs  ActrService.swift.init.hbs  HandlerImpl.swift.hbs  LifecycleAdapter.swift.hbs  actr.toml.hbs  manifest.lock.toml.hbs  project.yml.hbs
cli/src/: cli.rs  config_compat.rs  error.rs  lib.rs  main.rs  project_language.rs  test_support.rs  utils.rs  web_assets.rs
cli/src/commands/: build.rs  check.rs  completion.rs  config.rs  deps.rs  dev.rs  discovery.rs  dlq.rs  doc.rs  fingerprint.rs  fingerprint_lock.rs  generate.rs  init.rs  install.rs  logs.rs  mod.rs  ops.rs  package_build.rs  pkg.rs  process.rs  ps.rs  registry.rs  restart.rs  rm.rs  run.rs  runtime_state.rs  start.rs  stop.rs  version.rs
cli/src/config/: loader.rs  mod.rs  resolver.rs  schema.rs
cli/src/core/: container.rs  error.rs  mod.rs  pipelines.rs
cli/src/templates/: mod.rs  mod_tests.rs
cli/tests/: cli_shape.rs  coverage_cli_commands.rs  e2e_python_web_echo.rs  e2e_rust_echo.rs  e2e_support.rs  e2e_swift_echo.rs  e2e_typescript_echo.rs  gen_language_guard.rs  integration_test.rs  kotlin_echo.rs  rust_echo.rs  swift_echo.rs  typescript_gen_scenarios.rs
core/framework/: Cargo.toml
core/framework/src/: context.rs  dest.rs  dispatcher.rs  lib.rs  service_handler.rs  test_support.rs  workload.rs
core/framework/tests/: stream_abi_contract.rs
core/framework/wit/: actr-workload.wit
core/framework/wit-v2/: actr-workload.wit
core/hlc/: Cargo.toml
core/hlc/src/: lib.rs
core/hlc/tests/: hlc.rs
core/hyper/: API_CLEANUP_PROGRESS.zh.md  Cargo.toml  MOBILE_REAL_SCENARIO_COVERAGE.zh.md  build.rs
core/hyper/benches/: dispatch_throughput.rs  recovery_latency.rs
core/hyper/src/: error.rs  (+18 more)
core/platform-traits/: Cargo.toml
core/runtime/: ARCHITECTURE.md  Cargo.toml
core/runtime-dynclib/: Cargo.toml
core/runtime-wasm/: Cargo.toml
core/sdk-wasm/: Cargo.toml
core/version/: Cargo.toml
crates/config/: Cargo.toml  DESIGN_LOCK_FILE.md  test_config.toml
crates/framework/: Cargo.toml
crates/framework-protoc-codegen/: Cargo.toml  README.md
crates/protocol/: Cargo.toml  README.zh.md  build.rs
crates/runtime/: ARCHITECTURE.md  Cargo.toml
crates/runtime-mailbox/: Cargo.toml
crates/version/: Cargo.toml
examples/echo-client/: Cargo.toml  actr.toml  build.rs
protoc-gen-actorframework/: Cargo.toml
protoc-gen-actorframework/src/: generator.rs  main.rs
shared-protocols/: Cargo.toml  build.rs
shared-protocols/src/: echo_service_actor.rs  file_transfer_service_actor.rs  lib.rs  media_streaming_service_actor.rs  stream_test_service_actor.rs
signaling-server/: Cargo.toml
signaling-server/src/: main.rs  signaling.rs
testing/error-fixture/: Cargo.toml
tools/: Cargo.toml
tools/src/: signaling_test.rs  test_client.rs
tools/wit-compile-web/: Cargo.toml
tools/wit-lint/: Cargo.toml  README.md
(+1717 files in other folders)
