[package]
name = "actor-rtc-framework"
version = "0.1.0"
edition = "2021"
description = "A distributed Actor framework built on WebRTC for real-time peer-to-peer communication"
license = "MIT"
keywords = ["actor", "webrtc", "distributed", "p2p", "real-time"]
categories = ["network-programming", "concurrency", "web-programming"]
repository = "https://github.com/your-org/actor-rtc-framework"

[lib]
name = "actor_rtc_framework"
path = "src/lib.rs"

[dependencies]
# WebRTC core
webrtc = { workspace = true }

# Async runtime and utilities  
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time", "fs"] }
# tokio-util = "0.7" # 当前未使用
futures-util = { workspace = true }
async-trait = { workspace = true }

# Networking
tokio-tungstenite = { workspace = true, features = ["native-tls"] }
url = { workspace = true }

# Protocol definitions
# tonic = { workspace = true } # 当前未直接使用，通过shared-protocols提供
prost = { workspace = true }
# prost-types = { workspace = true } # 当前未直接使用

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
bincode = "1.3"

# Utilities
uuid = { workspace = true, features = ["v4", "serde"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
bytes = "1.0"
crc32fast = "1.3"

# Logging
tracing = { workspace = true }

# Time handling
# chrono = { version = "0.4", features = ["serde"] } # 当前未使用

# Local dependencies
shared-protocols = { path = "../shared-protocols" }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
criterion = { workspace = true }

[[bench]]
name = "actor_benchmarks"
harness = false