[package]
name = "actr-cli"
version = "0.1.0"
edition = "2021"
description = "Command line tool for Actor-RTC framework projects"

[[bin]]
name = "actr-cli"
path = "src/main.rs"

[dependencies]
# Configuration parsing
actr-config = { path = "../actr-config" }

# Command line interface
clap = { version = "4.4", features = ["derive", "cargo"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Async traits
async-trait = { workspace = true }

# File system operations
fs_extra = "1.3"
tempfile = "3.8"

# Process management
tokio = { workspace = true, features = ["full"] }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# HTTP client for proto dependencies
reqwest = { version = "0.11", features = ["stream"] }

# Git support
git2 = { workspace = true }

# Cargo integration
cargo_metadata = "0.18"

# Template engine
handlebars = "5.1"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }