[package]
name = "actr-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/actor-rtc/actr"
description = "Command line tool for Actor-RTC framework projects"
keywords = ["actor", "cli", "codegen", "protobuf", "framework"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "actr"
path = "src/main.rs"

[dependencies]
# Actor-RTC main crate with config feature (includes protocol, config, version)
actr = { path = "..", version = "0.1", features = ["config"] }

# Direct access to config/protocol for CLI-specific types
# (These have different APIs than actr umbrella re-exports)
actr-config = { path = "../core/config", version = "0.1" }
actr-protocol = { path = "../core/protocol", version = "0.1" }

# Version / fingerprint utilities
actr-version = { path = "../core/version", version = "0.1" }

# Protoc code generator - CLI specific tool
actr-framework-protoc-codegen = { path = "../tools/protoc-gen/rust", version = "0.1" }

# Command line interface
clap = { version = "4.5", features = ["derive", "cargo"] }
dialoguer = "0.12.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async traits
async-trait = "0.1"

# File system operations
fs_extra = "1.3"
tempfile = "3.22"
dirs = "5.0"
walkdir = "2.5"

# Process management
tokio = { version = "1.48", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
owo-colors = "4.1.0"
comfy-table = "7.1"

# HTTP client for proto dependencies
reqwest = { version = "0.12", features = ["stream"] }

# Git support
git2 = "0.20"

# Cargo integration
cargo_metadata = "0.18"

# Template engine
handlebars = "5.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.9.8"
toml_edit = "0.22"

# Date/time handling for lock files
chrono = { version = "0.4", features = ["serde"] }

# Hashing for integrity verification
md5 = "0.7"
sha2 = "0.10"
hex = "0.4"
url = "2.5"

# Protocol buffer generation
prost-build = "0.14"
prost = "0.14"
prost-types = "0.14"

# Code generation utilities (for protoc-gen-actrframework)
quote = "1.0"
proc-macro2 = "1.0"
bytes = "1.0"
heck = "0.5"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
futures-util = "0.3"
uuid = { version = "1.19.0", features = ["v4"] }
rust-embed = "8.11.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.22"
rusqlite = { version = "0.32", features = ["bundled"] }

[lints.clippy]
collapsible_if = "allow"
