[package]
name = "shared-protocols"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true } # 由tonic-build生成的代码需要
# prost-types = { workspace = true } # 当前未直接使用
serde = { workspace = true, features = ["derive"] }

[build-dependencies]
tonic-build = { workspace = true }