[package]
name = "actr-python"
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/actor-rtc/actr-python"
authors = ["Actor-RTC Contributors"]
description = "Python bindings for actr (actr_python)"
readme = "README.md"
keywords = ["actor", "distributed", "p2p", "python", "realtime", "webrtc"]
categories = ["asynchronous", "network-programming", "web-programming"]

[lib]
crate-type = ["cdylib"]
name = "actr_python"

[dependencies]
actr-config = { path = "../../core/config" }
actr-framework = { path = "../../core/framework" }
actr-protocol = { path = "../../core/protocol" }
actr-runtime = { path = "../../core/runtime" }
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.10"
# Force vendored OpenSSL for all platforms to avoid system dependency issues
openssl = { version = "0.10", features = ["vendored"] }
prost = "0.14"
prost-types = "0.14"
pyo3 = { version = "0.27", features = ["abi3-py312", "extension-module"] }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1"
