[package]
name = "actr-ts"
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/Actrium/actr.git"
authors = ["Actor-RTC Contributors"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# napi-rs
napi = { version = "3.8.2", features = ["async", "tokio_rt"] }
napi-derive = "3.5.1"

# actr dependencies
actr-protocol = { path = "../../core/protocol" }
actr-framework = { path = "../../core/framework" }
actr-runtime = { path = "../../core/runtime" }
actr-config = { path = "../../core/config" }

# Async runtime
tokio = { version = "1", features = ["full"] }
bytes = "1"

# Utilities
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
parking_lot = "0.12"

[build-dependencies]
napi-build = "2"

[profile.release]
# lto = true
strip = true
