[package]
name = "actr-framework"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Actor-RTC framework core (stub for code generation testing)"
repository = "https://github.com/actor-rtc/actr"

[lints]
workspace = true

[dependencies]
actr-protocol.workspace = true
async-trait = "0.1"
bytes = "1.10"
futures-util = "0.3"
prost = "0.14"
uuid = { version = "1.18" }

# Optional dependencies for utilities
anyhow = "1.0"
tracing = "0.1"
maxminddb = { version = "0.24", optional = true }
reqwest = { version = "0.12", features = ["blocking"], optional = true }
flate2 = { version = "1.1", optional = true }
tar = { version = "0.4", optional = true }

[features]
default = []
# `cdylib`: enable native shared-library guest runtime (dynclib ABI)
cdylib = []
# `test-utils`: enable testing helpers such as `DummyContext` (includes UUID v4 generation and is not compatible with `wasm32`)
test-utils = ["uuid/v4"]
geoip = [
    "maxminddb",
    "reqwest",
    "flate2",
    "tar",
] # GeoIP with auto-download support

# wit-bindgen is only needed when compiling the guest for wasm32-wasip2.
# The generated code is gated by `#[cfg(target_arch = "wasm32")]`, so hosts
# never pull it in.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wit-bindgen = "=0.57.1"

[dev-dependencies]
tokio.workspace = true
