[package]
name = "actr-hyper"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Hyper — Actor platform infrastructure: sandbox, transport, scheduler, WASM engine, signing, AIS bootstrap, persistence & crypto primitives"
keywords = ["actor", "sandbox", "webassembly", "transport", "platform"]
categories = ["asynchronous", "cryptography", "network-programming"]

[lints]
workspace = true

[features]
default = []
wasm-engine = ["dep:wasmtime"]
dynclib-engine = ["dep:libloading"]
opentelemetry = [
  "actr-config/opentelemetry",
  "dep:opentelemetry",
  "dep:opentelemetry-otlp",
  "dep:opentelemetry_sdk",
  "dep:tracing-opentelemetry",
]
# Enable test utilities for integration tests (e.g., force ICE restart on all connections)
test-utils = []

[dependencies]
# === Internal (内部依赖) ===
actr-protocol.workspace = true
actr-runtime.workspace = true
actr-runtime-mailbox.workspace = true
actr-config.workspace = true
actr-framework.workspace = true
actr-service-compat.workspace = true

# === Storage (存储) ===
rusqlite = { workspace = true }

# === Async Runtime (异步运行时) ===
tokio.workspace = true
async-trait.workspace = true
futures-util.workspace = true
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["full"] }

# === Serialization (序列化) ===
serde.workspace = true
serde_json.workspace = true
prost.workspace = true
prost-types.workspace = true
bytes.workspace = true
toml.workspace = true

# === Cryptography (加密) ===
ed25519-dalek.workspace = true
sha2.workspace = true
rand.workspace = true

# === Networking (网络) ===
webrtc.workspace = true
tokio-tungstenite.workspace = true
reqwest = { version = "0.12", features = ["json"] }
url.workspace = true

# === Utilities (工具库) ===
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
base64.workspace = true
tempfile.workspace = true
pwrzv.workspace = true
crossbeam.workspace = true
dashmap.workspace = true
dotenvy = "0.15"
either = "1.15"
hex = "0.4"
num_cpus = "1.17"

# === Observability (可观测性, optional) ===
opentelemetry = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

# === WASM Runtime (WASM 运行时, optional) ===
wasmtime = { workspace = true, optional = true }

# === Dynclib Runtime (native shared library, optional) ===
libloading = { version = "0.8", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true }
rand.workspace = true
mockito = "1.4"
wat = "1"
prost.workspace = true
tempfile.workspace = true
tokio-test = "0.4"
webrtc-ice = "0.14"
webrtc-util = "0.12"
actr-hyper = { path = ".", features = ["test-utils"] }
actr-mock-signaling = { workspace = true }
