[package]
name = "actr-platform-traits"
version = "0.5.4"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Platform abstraction traits for Actor-RTC: KvStore, CryptoProvider, PlatformProvider"
keywords = ["actor", "platform", "abstraction", "traits"]
categories = ["asynchronous", "cryptography"]

[lints]
workspace = true

[features]
# `test-utils`: enable testing helpers such as the deterministic virtual
# `TestClock` (no extra dependencies; safe on all targets)
test-utils = []

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
