[package]
name = "actr-runtime"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
description = "Thin business dispatch layer for Actor-RTC — wasm32-compatible"
repository = "https://github.com/actor-rtc/actr"
license.workspace = true
keywords = ["actor", "dispatch", "runtime", "wasm"]
categories = ["asynchronous", "concurrency"]

[dependencies]
actr-framework.workspace = true
actr-protocol.workspace = true
async-trait.workspace = true
bytes = "1.10"
futures-util.workspace = true
tracing.workspace = true

[features]
default = []
# placeholder — 上层 crate 引用此 feature；完成拆分后移除
opentelemetry = []
test-utils = []

[lints]
workspace = true
