[package]
name = "actr-sdk-wasm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Actor WASM guest SDK for wasm32 actor developers, hiding ABI details behind a stable abstraction"
keywords = ["actor", "webassembly", "wasm", "sdk", "guest"]
categories = ["wasm", "embedded"]

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
